add pattern matching example